Abstracción base de datos.